fix: layout of list cotnainer to prevent overflow

--- a/m-hub-frontend/src/app/components/user-data/user-data.component.scss
+++ b/m-hub-frontend/src/app/components/user-data/user-data.component.scss
@@ -57,6 +57,11 @@ main {
     min-height: 420px;
     transition: all 0.4s ease-in-out;
     padding: 16px;
+
+    display: flex;
+    flex-direction: column;  
+    overflow: hidden;        
+    box-sizing: border-box;
 }
 
 .user-data-header {
@@ -82,6 +87,11 @@ main {
 .user-data-content {
 
   padding: 36px;
+  flex: 1; 
+  overflow-y: auto;  
+  min-height: 0;     
+  width: 100%;      
+  box-sizing: border-box;
 
   .card-container {
     display: flex;
@@ -94,7 +104,7 @@ main {
     flex-direction: column;
     padding: 4px 12px 12px;
     width: 100%;
-    max-width: 500px;
+    max-width: 420px;
     border: 2px solid #455a64;
     border-radius: 12px;
     cursor: pointer;
